# simple_api_fastapi

./: README.md  main.py  pyproject.toml
app/database/: settings.py
app/models/: user_model.py
app/routes/: user_route.py
app/schemas/: user_schema.py
